# my-telemetry

./: .gitignore  Cargo.toml  README.md
my-telemetry/: Cargo.toml
my-telemetry-core/: Cargo.toml
my-telemetry-core/src/: ctx.rs  event_duration_tracker.rs  my_telemetry_event.rs  telemetry_collector.rs  telemetry_interface.rs
my-telemetry-writer/: Cargo.toml  build.rs
my-telemetry-writer/src/: grpc_writer.rs  http_writer.rs  lib.rs  my_telemetry_writer.rs  settings.rs
my-telemetry/src/: ctx.rs  event_duration_tracker.rs  lib.rs  telemetry_collector.rs  telemetry_interface.rs
src/: ctx.rs  event_duration_tracker.rs  lib.rs  my_telemetry.rs  my_telemetry_event.rs  my_telemetry_to_console.rs  telemetry_collector.rs  telemetry_interface.rs
