[package]
name = "my-telemetry-core"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
tokio = { version = "*" }
lazy_static = "*"
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
