[package]
name = "my-telemetry-writer"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-telemetry-core = { path = "../my-telemetry-core" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }
async-trait = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

tokio = { version = "*", features = ["full"] }
tonic = { version = "0.13", features = ["prost"] }
prost = "0.13"
prost-types = "0.13"
futures-core = "*"
futures = "*"
futures-util = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.2" }
tonic-build = "0.13"
