[package]
name = "my-telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
my_telemetry_writer = ["my-telemetry-writer"]

[dependencies]
my-telemetry-core = { path = "../my-telemetry-core" }
my-telemetry-writer = {optional = true, path = "../my-telemetry-writer" }
