[package]
name = "my-telemetry"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["my_telemetry_writer"]
my_telemetry_writer = []

[dependencies]
my-telemetry-core = { path = "../my-telemetry-core" }
my-telemetry-writer = { optional = true, path = "../my-telemetry-writer" }
